# pb_cmu_navigation

./: .gitignore  .gitmodules  README.md
.github/workflows/: ci.yml
cmu_nav_bringup/: CMakeLists.txt  package.xml
cmu_nav_bringup/config/simulation/: cmu_nav_params.yaml  far_planner.yaml  nav2_params.yaml  navigate_through_poses_w_replanning_and_recovery.xml  navigate_w_replanning_only_if_goal_is_updated.xml  point_lio.yaml  tare_planner.yaml
cmu_nav_bringup/launch/: bringup_launch.py  bringup_sim.launch.py  demo_cmu_launch.py  localization_launch.py  navigation_launch.py  rm_multi_sentry_simulation_launch.py  rm_sentry_simulation_launch.py  rviz_launch.py
cmu_nav_bringup/rviz/: cmu_nav.rviz  nav2_namespaced_view.rviz
ign_sim_pointcloud_tool/: package.xml
loam_interface/src/: loamInterface.cpp
local_planner/src/: localPlanner.cpp  pathFollower.cpp
pb2025_nav_bringup/: package.xml
pb2025_nav_bringup/config/simulation/: nav2_params.yaml
pb2025_nav_bringup/launch/: bringup_launch.py  localization_launch.py  rm_multi_sentry_simulation_launch.py  rm_sentry_simulation_launch.py
pb2025_nav_bringup/rviz/: cmu_nav.rviz  nav2_namespaced_view.rviz
pb2025_sentry_nav/: package.xml
pb25_nav_bringup/: package.xml
pb25_nav_bringup/launch/: bringup_launch.py  demo_cmu_launch.py  localization_launch.py  navigation_launch.py  rviz_launch.py
pb25_nav_bringup/map/: rmuc_2024.yaml
pb_cmu_navigation/: CMakeLists.txt  package.xml
sensor_scan_generation/include/sensor_scan_generation/: sensor_scan_generation.hpp
sensor_scan_generation/launch/: sensor_scan_generation.launch.py
sensor_scan_generation/src/: sensor_scan_generation.cpp
src/cmu_nav_bringup/: CMakeLists.txt  package.xml
src/cmu_nav_bringup/launch/: bringup_sim.launch.py
src/cmu_nav_bringup/rviz/: vehicle_simulator.rviz
src/loam_interface/launch/: loam_interface.launch.py
src/loam_interface/src/: loamInterface.cpp
src/local_planner/launch/: local_planner.launch.py
src/local_planner/src/: localPlanner.cpp  pathFollower.cpp
src/sensor_scan_generation/: CMakeLists.txt  package.xml
src/sensor_scan_generation/include/sensor_scan_generation/: sensor_scan_generation.hpp
src/sensor_scan_generation/launch/: sensor_scan_generation.launch.py
src/sensor_scan_generation/src/: sensorScanGeneration.cpp  sensor_scan_generation.cpp
src/teleop_rviz_plugin/: plugin_description.xml
src/teleop_rviz_plugin/src/: drive_widget.cpp  drive_widget.h
src/terrain_analysis/launch/: terrain_analysis.launch.py
src/terrain_analysis/src/: terrainAnalysis.cpp
src/terrain_analysis_ext/launch/: terrain_analysis_ext.launch.py
src/terrain_analysis_ext/src/: terrainAnalysisExt.cpp
src/vehicle_simulator/launch/: system_campus.launch.py  system_forest.launch.py  system_garage.launch.py  system_indoor.launch.py  system_real_robot.launch.py  system_tunnel.launch.py
src/vehicle_simulator/rviz/: vehicle_simulator.rviz
src/vehicle_simulator/src/: transform_pcd_node.cpp  vehicleSimulator.cpp
src/visualization_tools/src/: visualizationTools.cpp
src/waypoint_rviz_plugin/src/: waypoint_tool.cpp
teleop_rviz_plugin/src/: teleop_panel.cpp  teleop_panel.h
terrain_analysis/launch/: terrain_analysis.launch.py
terrain_analysis_ext/launch/: terrain_analysis_ext.launch.py
vehicle_simulator/: CMakeLists.txt
vehicle_simulator/launch/: system_campus.launch.py  system_forest.launch.py  system_garage.launch.py  system_indoor.launch.py  system_tunnel.launch.py
visualization_tools/src/: visualizationTools.cpp
waypoint_example/src/: waypointExample.cpp
waypoint_rviz_plugin/src/: waypoint_tool.cpp
