<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pb2025_sentry_nav</name>
  <version>0.0.1</version>
  <description>SMBU PolarBear Team Sentry Navigation for Robomaster 2025</description>
  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- pb25_nav_bringup doesn't belong for recursive dependencies -->
  <depend>navigation2</depend>
  <depend>ign_sim_pointcloud_tool</depend>
  <depend>livox_ros_driver2</depend>
  <depend>loam_interface</depend>
  <depend>local_planner</depend>
  <depend>pb_omni_pid_pursuit_controller</depend>
  <depend>point_lio</depend>
  <depend>sensor_scan_generation</depend>
  <depend>terrain_analysis</depend>
  <depend>terrain_analysis_ext</depend>
  <depend>waypoint_rviz_plugin</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
