<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pb2025_nav_bringup</name>
  <version>0.0.0</version>
  <description>pb2025_nav_bringup</description>
  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pb_cmu_navigation</depend>
  <depend>livox_ros_driver2</depend>
  <depend>ign_sim_pointcloud_tool</depend>
  <depend>point_lio</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
