<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cmu_nav_bringup</name>
  <version>0.0.0</version>
  <description>cmu_nav_bringup</description>
  <maintainer email="lihanchen2004@163.com">Lihan Chen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>livox_ros_driver2</depend>
  <depend>point_lio</depend>
  <depend>loam_interface</depend>
  <depend>sensor_scan_generation</depend>
  <depend>terrain_analysis</depend>
  <depend>terrain_analysis_ext</depend>
  <depend>local_planner</depend>
  <depend>teleop_rviz_plugin</depend>
  <depend>visualization_tools</depend>
  <depend>waypoint_example</depend>
  <depend>waypoint_rviz_plugin</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
